--- a/github/workflows/deploy.yml
+++ b/github/workflows/deploy.yml
@@ -1,25 +1,20 @@
 name: Deploy to GitHub Pages
 
 on:
-  # Trigger the workflow on push to main branch
   push:
     branches: ["main"]
-  # Allow manual trigger from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -30,16 +25,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          # Removed cache: 'npm' to prevent lock file error
           
       - name: Install dependencies
-        # If package-lock.json exists, use ci, otherwise install
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
+        # Use npm install to generate a lockfile on the fly if missing
+        run: npm install
           
       - name: Build
         run: npm run build
@@ -49,7 +39,6 @@ jobs:
         with:
           path: ./dist
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
